Ver. 2.3.0 - 2021-09-16
-------------------------
- Feature - MapRequest management added (migration added) (#45)

Ver. 2.2.1 - 2021-09.14
-------------------------
- Feature - Organization name prop added to CommunicationDto class (#48)

Ver. 2.2.0 - 2021-09-13
-------------------------
- Feature - Spanish language support added (#46)
- Feature - GetOrganization api added to ts-sdk (#47)

Ver. 2.1.2 - 2021-08-06
--------------------------
- Feature - Filter update for GetFeatureCollections (#43)

Ver. 2.1.1 - 2021-08-06
--------------------------
- Feature - Category min/max value as string (migration added)(#44)

Ver. 2.1.0 - 2021-08-05
--------------------------
- Feature - Tips management added (migration added)(#27)
- Feature - Quizzes management added (migration added)(#41)
- Feature - Answers management added (migration added)(#42)

Ver. 2.0.0 - 2021-07-30
---------------------------
- Bugfix - Set default role for new users (#33)
- Bugfix - Search filter case insensitive (#35)
- Feature - AdultInfo prop added to ReportDto class (#15)
- Feature - Report refactoring (migration added)(#37)
- Feature - Social SDK update (#38)
- Feature - Organization hierarchy (migration added)(#30)
- Feature - CsiServices class library added (migration added for Person.LegacyId)(#39)
- Feature - FieldType added to Category (migration added)(#40)

Ver. 1.7.3 - 2021-07-01
---------------------------
- Feature - Subsidence Hazard Type added

Ver. 1.7.2 - 2021-06-18
---------------------------
- Feature - Target translations added (migration added)(#31)

Ver. 1.7.1 - 2021-06-14
---------------------------
- Feature - Edited Unique Key of category_translations (migration added)
- Feature - GroupKey prop added to CategoryGroupDto

Ver. 1.7.0 - 2021-06-10
---------------------------
- Feature - Add filter on receiver list in case of new Communication (#29)
- Feature - DashboardAppService added (#4)
- Feature - Categories refactoring (2 migrations added)(#28)


Ver. 1.6.0 - 2021-05-31