@@ -28,7 +28,23 @@ namespace Ermes.GeoJson
         public IQueryable<PersonActionActivity> GetPersonActionActivities(DateTime startDate, DateTime endDate, Geometry boundingBox);
         //public IQueryable<PersonAction> GetPersonActions(DateTime startDate, DateTime endDate, Geometry boundingBox);
         public string GetPersonActions(DateTime StartDate, DateTime EndDate, int[] organizationIdList, List<ActionStatusType> statusTypes, int[] activityIds, Geometry boundingBox, string search = "", string language = "it");
-        public string GetGeoJsonCollection(DateTime StartDate, DateTime EndDate, Geometry BoundingBox, List<EntityType> entityTypes, int[] organizationIdList, List<ActionStatusType> statusTypes, int[] activityIds, List<HazardType> hazardTypes, List<GeneralStatus> reportStatusTypes, List<MissionStatusType> missionStatusTypes, int srid, string language = "it");
+        public string GetGeoJsonCollection(
+            DateTime StartDate, 
+            DateTime EndDate, 
+            Geometry BoundingBox, 
+            List<EntityType> entityTypes, 
+            int[] organizationIdList, 
+            List<ActionStatusType> statusTypes, 
+            int[] activityIds, 
+            List<HazardType> hazardTypes, 
+            List<GeneralStatus> reportStatusTypes, 
+            List<MissionStatusType> missionStatusTypes, 
+            List<HazardType> mapRequestHazardTypes,
+            List<LayerType> mapRequestLayerTypes,
+            List<MapRequestStatusType> mapRequestStatusTypes,
+            int srid, 
+            string language = "it"
+        );
         public List<Activation> GetPersonActivations(DateTime StartDate, DateTime EndDate, ActionStatusType statusType);
     }
 }
